@@ -2,6 +2,7 @@
 v3.0.11-git
 -----------
 
+[jan] Fix importing vCards with empty X-ANNIVERSARY attributes (Bug #10557).
 [jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).
 
 
